solve Error, Remove Underline from Every Text

--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
                     <div class="w-full lg:w-1/2 xl:w-7/12 lg:pr-30px xl:pr-0">
                         <div class="content-section pt-6 pb-14 lg:py-24 xl:pt-[129px] xl:pb-[128px]">
                             <h1
-                                class="text-dark font-semibold sm:font-bold mb-7 underline decoration-dark leading-tight text-4xl md:text-5xl xl:text-[70px] xl:leading-[78px] max-w-[500px] lg:max-w-none">
+                                class="text-dark font-semibold sm:font-bold mb-7 leading-tight text-4xl md:text-5xl xl:text-[70px] xl:leading-[78px] max-w-[500px] lg:max-w-none">
                                 Aim
                                 to be Efficient
                                 by <span class="text-secondary">Enhancing</span> Skills</h1>
-                            <p class="text-gray text-lg leading-7  max-w-[613px] underline decoration-gray">A learning
+                            <p class="text-gray text-lg leading-7 max-w-[613px]">A learning
                                 platform based on
                                 practical
                                 knowledge with best & world class mentors. We help you
@@ -348,7 +348,7 @@
                                 <a href="#"
                                     class="_edumy_course_card_btn group sm:rounded-lg sm:bg-primary sm:px-5 sm:py-3 sm:w-auto sm:h-auto sm:border-0">
                                     <span
-                                        class="hidden sm:block text-white font-semibold underline decoration-white">Enroll
+                                        class="hidden sm:block text-white font-semibold">Enroll
                                         Now</span>
                                     <span class="sm:hidden">
                                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -646,7 +646,7 @@
                     </div>
 
                     <!-- Card Section  -->
-                    <div class="swiper ui-ux-swiper mt-8 lg:mt-12 py-1">
+                    <div class="swiper ui-ux-swiper mt-8 lg:mt-12 px-0.5 py-1">
                         <div class="swiper-wrapper">
                             <!-- Course Card Edumy slide-->
                             <div class="swiper-slide">
@@ -1175,7 +1175,7 @@
                         </div>
                     </div>
                     <!-- Card Section  -->
-                    <div class="swiper web-development-swiper mt-8 lg:mt-12 py-1">
+                    <div class="swiper web-development-swiper mt-8 lg:mt-12 py-1 px-0.5">
                         <div class="swiper-wrapper">
                             <!-- Course Card Edumy slide-->
                             <div class="swiper-slide">
@@ -1692,7 +1692,7 @@
                         <div class="_edumy_feature_card">
                             <img src="./assets/images/feature/icon-01.png" alt="icon">
                             <h6 class="_edumy_feature_card_title">Taught by Industry Professionals</h6>
-                            <p class="text-gray text-base leading-6 underline decoration-gray">A learning platform based
+                            <p class="text-gray text-base leading-6">A learning platform based
                                 on
                                 practical knowledge with best & mentors.</p>
                         </div>
@@ -1700,7 +1700,7 @@
                         <div class="_edumy_feature_card">
                             <img src="./assets/images/feature/icon-02.png" alt="icon">
                             <h6 class="_edumy_feature_card_title">Learn from the expert mentor</h6>
-                            <p class="text-gray text-base leading-6 underline decoration-gray">A learning platform based
+                            <p class="text-gray text-base leading-6">A learning platform based
                                 on
                                 practical knowledge with best & mentors.</p>
                         </div>
@@ -1708,7 +1708,7 @@
                         <div class="_edumy_feature_card">
                             <img src="./assets/images/feature/icon-03.png" alt="icon">
                             <h6 class="_edumy_feature_card_title">Discuss your future career goals</h6>
-                            <p class="text-gray text-base leading-6 underline decoration-gray">A learning platform based
+                            <p class="text-gray text-base leading-6">A learning platform based
                                 on
                                 practical knowledge with best & mentors.</p>
                         </div>
@@ -1716,7 +1716,7 @@
                         <div class="_edumy_feature_card">
                             <img src="./assets/images/feature/icon-04.png" alt="icon">
                             <h6 class="_edumy_feature_card_title">Mentorship and lifetime support</h6>
-                            <p class="text-gray text-base leading-6 underline decoration-gray">A learning platform based
+                            <p class="text-gray text-base leading-6">A learning platform based
                                 on
                                 practical knowledge with best & mentors.</p>
                         </div>
@@ -1724,7 +1724,7 @@
                         <div class="_edumy_feature_card">
                             <img src="./assets/images/feature/icon-05.png" alt="icon">
                             <h6 class="_edumy_feature_card_title">Help to grow soft skills</h6>
-                            <p class="text-gray text-base leading-6 underline decoration-gray">A learning platform based
+                            <p class="text-gray text-base leading-6">A learning platform based
                                 on
                                 practical knowledge with best & mentors.</p>
                         </div>
@@ -1732,7 +1732,7 @@
                         <div class="_edumy_feature_card">
                             <img src="./assets/images/feature/icon-06.png" alt="icon">
                             <h6 class="_edumy_feature_card_title">Certificate at the end the course</h6>
-                            <p class="text-gray text-base leading-6 underline decoration-gray">A learning platform based
+                            <p class="text-gray text-base leading-6">A learning platform based
                                 on
                                 practical knowledge with best & mentors.</p>
                         </div>
@@ -1765,7 +1765,7 @@
                                     </div>
                                     <div>
                                         <h6
-                                            class="text-dark leading-auto text-22px sm:text-2xl font-semibold underline decoration-dark">
+                                            class="text-dark leading-auto text-22px sm:text-2xl font-semibold">
                                             Michael
                                             Smith</h6>
                                         <div
@@ -1817,7 +1817,7 @@
 
                                             </li>
                                         </ul>
-                                        <p class="text-gray text-lg sm:text-xl underline decoration-gray leading-30px">I
+                                        <p class="text-gray text-lg sm:text-xl leading-30px">I
                                             learned
                                             Graphic
                                             Design
@@ -1839,7 +1839,7 @@
                                     </div>
                                     <div>
                                         <h6
-                                            class="text-dark leading-auto text-22px sm:text-2xl font-semibold underline decoration-dark">
+                                            class="text-dark leading-auto text-22px sm:text-2xl font-semibold">
                                             Jack Smith</h6>
                                         <div
                                             class="flex justify-center items-center my-2 gap-x-2.5 sm:text-lg text-lightGray font-normal">
@@ -1890,7 +1890,7 @@
 
                                             </li>
                                         </ul>
-                                        <p class="text-gray text-lg sm:text-xl underline decoration-gray leading-30px">I
+                                        <p class="text-gray text-lg sm:text-xl leading-30px">I
                                             learned
                                             Graphic
                                             Design
@@ -1912,7 +1912,7 @@
                                     </div>
                                     <div>
                                         <h6
-                                            class="text-dark leading-auto text-22px sm:text-2xl font-semibold underline decoration-dark">
+                                            class="text-dark leading-auto text-22px sm:text-2xl font-semibold">
                                             Michael
                                             Smith</h6>
                                         <div
@@ -1964,7 +1964,7 @@
 
                                             </li>
                                         </ul>
-                                        <p class="text-gray text-lg sm:text-xl underline decoration-gray leading-30px">I
+                                        <p class="text-gray text-lg sm:text-xl leading-30px">I
                                             learned
                                             Graphic
                                             Design
@@ -1986,7 +1986,7 @@
                                     </div>
                                     <div>
                                         <h6
-                                            class="text-dark leading-auto text-22px sm:text-2xl font-semibold underline decoration-dark">
+                                            class="text-dark leading-auto text-22px sm:text-2xl font-semibold">
                                             Jack Smith</h6>
                                         <div
                                             class="flex justify-center items-center my-2 gap-x-2.5 sm:text-lg text-lightGray font-normal">
@@ -2037,7 +2037,7 @@
 
                                             </li>
                                         </ul>
-                                        <p class="text-gray text-lg sm:text-xl underline decoration-gray leading-30px">I
+                                        <p class="text-gray text-lg sm:text-xl leading-30px">I
                                             learned
                                             Graphic
                                             Design
@@ -2107,7 +2107,7 @@
                         <div
                             class="_edumy_faq_accordion_header flex justify-between items-center cursor-pointer gap-x-10">
                             <h4
-                                class="flex-shrink text-xl sm:text-22px text-dark underline decoration-dark font-semibold">
+                                class="flex-shrink text-xl sm:text-22px text-dark font-semibold">
                                 1. What do you offer
                                 for
                                 a learner?</h4>
@@ -2147,7 +2147,7 @@
                         <!-- Accordion Header -->
                         <div
                             class="_edumy_faq_accordion_header flex justify-between items-center cursor-pointer gap-x-10">
-                            <h4 class="flex-shrink text-xl sm:text-22px text-dark underline decoration-dark font-semibold">
+                            <h4 class="flex-shrink text-xl sm:text-22px text-dark font-semibold">
                                 2. Are the courses prerecorded?</h4>
                             <button type="button"
                                 class="flex-shrink-0 w-9 h-9 rounded-full bg-primary/10 flex justify-center items-center">
@@ -2184,7 +2184,7 @@
                         <!-- Accordion Header -->
                         <div
                             class="_edumy_faq_accordion_header flex justify-between items-center cursor-pointer gap-x-10">
-                            <h4 class="flex-shrink text-xl sm:text-22px text-dark underline decoration-dark font-semibold">
+                            <h4 class="flex-shrink text-xl sm:text-22px text-dark font-semibold">
                                 3. How do I join the batch?</h4>
                             <button type="button"
                                 class="flex-shrink-0 w-9 h-9 rounded-full bg-primary/10 flex justify-center items-center">
@@ -2221,7 +2221,7 @@
                         <!-- Accordion Header -->
                         <div
                             class="_edumy_faq_accordion_header flex justify-between items-center cursor-pointer gap-x-10">
-                            <h4 class="flex-shrink text-xl sm:text-22px text-dark underline decoration-dark font-semibold">
+                            <h4 class="flex-shrink text-xl sm:text-22px text-dark  font-semibold">
                                 4. Will I get a certificate?</h4>
                             <button type="button"
                                 class="flex-shrink-0 w-9 h-9 rounded-full bg-primary/10 flex justify-center items-center">
@@ -2260,7 +2260,7 @@
                         <div
                             class="_edumy_faq_accordion_header flex justify-between items-center cursor-pointer gap-x-10">
                             <h4
-                                class="flex-shrink text-xl sm:text-22px text-dark underline decoration-dark font-semibold">
+                                class="flex-shrink text-xl sm:text-22px text-dark font-semibold">
                                 5. What resources will you provide?</h4>
                             <button type="button"
                                 class="flex-shrink-0 w-9 h-9 rounded-full bg-primary/10 flex justify-center items-center">
@@ -2309,16 +2309,16 @@
                             To
                             Our Newsletter</h2>
                         <p
-                            class="text-white sm:text-lg leading-7 underline decoration-white text-center sm:max-w-[418px] mx-auto">
+                            class="text-white sm:text-lg leading-7 text-center sm:max-w-[418px] mx-auto">
                             Subscribe to our newsletter and get many interesting things every week</p>
                     </div>
                     <div class="mt-10">
                         <div
                             class="w-full md:w-fit sm:flex items-center sm:gap-x-2.5 p-2.5 bg-transparent sm:bg-white rounded mx-auto">
                             <input type="text" placeholder="Write your email here"
-                                class="bg-[#F5F7FA] font-hindSiliguri rounded p-3 md:p-4 text-lg text-lightGray w-full md:w-[465px] placeholder:text-lightGray placeholder:underline placeholder:decoration-lightGray placeholder:opacity-100">
+                                class="bg-[#F5F7FA] font-hindSiliguri rounded p-3 md:p-4 text-lg text-lightGray w-full md:w-[465px] placeholder:opacity-100">
                             <button type="button"
-                                class="bg-secondary w-full text-center sm:w-fit px-9 py-3 md:py-4  mt-3 sm:mt-0 rounded font-hindSiliguri text-lg text-white underline decoration-white">Subscribe</button>
+                                class="bg-secondary w-full text-center sm:w-fit px-9 py-3 md:py-4  mt-3 sm:mt-0 rounded font-hindSiliguri text-lg text-white">Subscribe</button>
                         </div>
                     </div>
                 </div>
@@ -2337,7 +2337,7 @@
                 <div class="logo-section">
                     <img src="./assets/images/footer/logo.svg" alt="logo">
                     <p
-                        class="text-lightGray font-hindSiliguri text-base leading-8 my-6 underline decoration-lightGray max-w-[228px]">
+                        class="text-lightGray font-hindSiliguri text-base leading-8 my-6 max-w-[228px]">
                         A learning platform based on practical knowledge. </p>
                     <ul class="flex items-center gap-x-3">
                         <li>
